@@ -50,7 +50,6 @@ import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
@@ -60,10 +59,7 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
 import static org.apache.kafka.server.common.MetadataVersion.IBP_3_5_IV0;
 import static org.apache.kafka.server.common.MetadataVersion.MINIMUM_VERSION;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -145,7 +141,7 @@ public class MetadataLoaderTest {
     @Test
     public void testInstallPublishers() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testInstallPublishers");
-        List<MockPublisher> publishers = asList(new MockPublisher("a"),
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"),
                 new MockPublisher("b"),
                 new MockPublisher("c"));
         try (MetadataLoader loader = new MetadataLoader.Builder().
@@ -176,7 +172,7 @@ public class MetadataLoaderTest {
             List<Batch<ApiMessageAndVersion>> batches = lists
                 .stream()
                 .map(records -> Batch.data(0, 0, 0, 0, records))
-                .collect(Collectors.toList());
+                .toList();
 
             return new MockSnapshotReader(provenance, batches);
         }
@@ -247,7 +243,7 @@ public class MetadataLoaderTest {
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0L)).
                 build()) {
-            loader.installPublishers(singletonList(publisher)).get();
+            loader.installPublishers(List.of(publisher)).get();
             if (loadSnapshot) {
                 MockSnapshotReader snapshotReader = new MockSnapshotReader(
                     new MetadataProvenance(200, 100, 4000, true),
@@ -257,10 +253,10 @@ public class MetadataLoaderTest {
                             100,
                             4000,
                             10,
-                            singletonList(new ControlRecord(ControlRecordType.SNAPSHOT_HEADER, new SnapshotHeaderRecord()))
+                            List.of(new ControlRecord(ControlRecordType.SNAPSHOT_HEADER, new SnapshotHeaderRecord()))
                         ),
                         Batch.data(0, 0, 0, 0,
-                            singletonList(new ApiMessageAndVersion(new FeatureLevelRecord().
+                            List.of(new ApiMessageAndVersion(new FeatureLevelRecord().
                                 setName(MetadataVersion.FEATURE_NAME).
                                 setFeatureLevel(MINIMUM_VERSION.featureLevel()), (short) 0))
                         )
@@ -280,13 +276,13 @@ public class MetadataLoaderTest {
                 assertEquals("testPublisherCannotBeInstalledMoreThanOnce: Attempted to install " +
                     "publisher MockPublisher, which is already installed.",
                         assertThrows(ExecutionException.class,
-                                () -> loader.installPublishers(singletonList(publisher)).get()).
+                                () -> loader.installPublishers(List.of(publisher)).get()).
                                 getCause().getMessage());
             } else {
                 assertEquals("testPublisherCannotBeInstalledMoreThanOnce: Attempted to install " +
                     "a new publisher named MockPublisher, but there is already a publisher with that name.",
                         assertThrows(ExecutionException.class,
-                                () -> loader.installPublishers(singletonList(new MockPublisher())).get()).
+                                () -> loader.installPublishers(List.of(new MockPublisher())).get()).
                                 getCause().getMessage());
             }
         }
@@ -298,7 +294,7 @@ public class MetadataLoaderTest {
     @Test
     public void testRemovePublisher() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testRemovePublisher");
-        List<MockPublisher> publishers = asList(new MockPublisher("a"),
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"),
                 new MockPublisher("b"),
                 new MockPublisher("c"));
         try (MetadataLoader loader = new MetadataLoader.Builder().
@@ -309,7 +305,7 @@ public class MetadataLoaderTest {
             loader.removeAndClosePublisher(publishers.get(1)).get();
             MockSnapshotReader snapshotReader = MockSnapshotReader.fromRecordLists(
                 new MetadataProvenance(100, 50, 2000, true),
-                singletonList(singletonList(new ApiMessageAndVersion(
+                List.of(List.of(new ApiMessageAndVersion(
                     new FeatureLevelRecord().
                         setName(MetadataVersion.FEATURE_NAME).
                         setFeatureLevel(MINIMUM_VERSION.featureLevel()), (short) 0))));
@@ -337,7 +333,7 @@ public class MetadataLoaderTest {
     public void testLoadEmptySnapshot() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLoadEmptySnapshot");
         MockTime time = new MockTime();
-        List<MockPublisher> publishers = singletonList(new MockPublisher());
+        List<MockPublisher> publishers = List.of(new MockPublisher());
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setTime(time).
@@ -384,13 +380,13 @@ public class MetadataLoaderTest {
     ) throws Exception {
         MockSnapshotReader snapshotReader = new MockSnapshotReader(
             new MetadataProvenance(offset, 100, 4000, true),
-            singletonList(
+            List.of(
                 Batch.control(
                     200,
                     100,
                     4000,
                     10,
-                    singletonList(new ControlRecord(ControlRecordType.SNAPSHOT_HEADER, new SnapshotHeaderRecord()))
+                    List.of(new ControlRecord(ControlRecordType.SNAPSHOT_HEADER, new SnapshotHeaderRecord()))
                 )
             )
         );
@@ -413,7 +409,7 @@ public class MetadataLoaderTest {
             List<ApiMessageAndVersion> records
         ) {
             return new MockBatchReader(batchBaseOffset,
-                singletonList(newBatch(batchBaseOffset, epoch, records)));
+                List.of(newBatch(batchBaseOffset, epoch, records)));
         }
 
         static Batch<ApiMessageAndVersion> newBatch(
@@ -472,7 +468,7 @@ public class MetadataLoaderTest {
     public void testLoadEmptyBatch() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLoadEmptyBatch");
         MockTime time = new MockTime();
-        List<MockPublisher> publishers = singletonList(new MockPublisher());
+        List<MockPublisher> publishers = List.of(new MockPublisher());
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setTime(time).
@@ -483,13 +479,13 @@ public class MetadataLoaderTest {
             publishers.get(0).firstPublish.get(10, TimeUnit.SECONDS);
             MockBatchReader batchReader = new MockBatchReader(
                 300,
-                singletonList(
+                List.of(
                     Batch.control(
                         300,
                         100,
                         4000,
                         10,
-                        singletonList(new ControlRecord(ControlRecordType.SNAPSHOT_HEADER, new SnapshotHeaderRecord()))
+                        List.of(new ControlRecord(ControlRecordType.SNAPSHOT_HEADER, new SnapshotHeaderRecord()))
                     )
                 )
             ).setTime(time);
@@ -519,7 +515,7 @@ public class MetadataLoaderTest {
     @Test
     public void testLastAppliedOffset() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLastAppliedOffset");
-        List<MockPublisher> publishers = asList(new MockPublisher("a"),
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"),
                 new MockPublisher("b"));
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
@@ -527,11 +523,11 @@ public class MetadataLoaderTest {
                 build()) {
             loader.installPublishers(publishers).get();
             loader.handleLoadSnapshot(MockSnapshotReader.fromRecordLists(
-                new MetadataProvenance(200, 100, 4000, true), asList(
-                    singletonList(new ApiMessageAndVersion(new FeatureLevelRecord().
+                new MetadataProvenance(200, 100, 4000, true), List.of(
+                    List.of(new ApiMessageAndVersion(new FeatureLevelRecord().
                         setName(MetadataVersion.FEATURE_NAME).
                         setFeatureLevel(MINIMUM_VERSION.featureLevel()), (short) 0)),
-                    singletonList(new ApiMessageAndVersion(new TopicRecord().
+                    List.of(new ApiMessageAndVersion(new TopicRecord().
                         setName("foo").
                         setTopicId(Uuid.fromString("Uum7sfhHQP-obSvfywmNUA")), (short) 0))
                 )));
@@ -540,8 +536,8 @@ public class MetadataLoaderTest {
             }
             loader.waitForAllEventsToBeHandled();
             assertEquals(200L, loader.lastAppliedOffset());
-            loader.handleCommit(new MockBatchReader(201, singletonList(
-                MockBatchReader.newBatch(201, 100, singletonList(
+            loader.handleCommit(new MockBatchReader(201, List.of(
+                MockBatchReader.newBatch(201, 100, List.of(
                     new ApiMessageAndVersion(new RemoveTopicRecord().
                         setTopicId(Uuid.fromString("Uum7sfhHQP-obSvfywmNUA")), (short) 0))))));
             loader.waitForAllEventsToBeHandled();
@@ -562,7 +558,7 @@ public class MetadataLoaderTest {
     @Test
     public void testCatchingUpState() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLastAppliedOffset");
-        List<MockPublisher> publishers = asList(new MockPublisher("a"),
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"),
                 new MockPublisher("b"));
         AtomicReference<OptionalLong> highWaterMark = new AtomicReference<>(OptionalLong.empty());
         try (MetadataLoader loader = new MetadataLoader.Builder().
@@ -596,11 +592,11 @@ public class MetadataLoaderTest {
         long offset
     ) throws Exception {
         loader.handleLoadSnapshot(MockSnapshotReader.fromRecordLists(
-                new MetadataProvenance(offset, 100, 4000, true), asList(
-                        singletonList(new ApiMessageAndVersion(new FeatureLevelRecord().
+                new MetadataProvenance(offset, 100, 4000, true), List.of(
+                        List.of(new ApiMessageAndVersion(new FeatureLevelRecord().
                                 setName(MetadataVersion.FEATURE_NAME).
                                 setFeatureLevel(MINIMUM_VERSION.featureLevel()), (short) 0)),
-                        singletonList(new ApiMessageAndVersion(new TopicRecord().
+                        List.of(new ApiMessageAndVersion(new TopicRecord().
                                 setName("foo").
                                 setTopicId(Uuid.fromString("Uum7sfhHQP-obSvfywmNUA")), (short) 0))
                 )));
@@ -612,11 +608,11 @@ public class MetadataLoaderTest {
         long offset
     ) throws Exception {
         loader.handleLoadSnapshot(MockSnapshotReader.fromRecordLists(
-                new MetadataProvenance(offset, 100, 4000, true), asList(
-                        singletonList(new ApiMessageAndVersion(new FeatureLevelRecord().
+                new MetadataProvenance(offset, 100, 4000, true), List.of(
+                        List.of(new ApiMessageAndVersion(new FeatureLevelRecord().
                                 setName(MetadataVersion.FEATURE_NAME).
                                 setFeatureLevel(MetadataVersion.latestProduction().featureLevel()), (short) 0)),
-                        singletonList(new ApiMessageAndVersion(new TopicRecord().
+                        List.of(new ApiMessageAndVersion(new TopicRecord().
                                 setName("bar").
                                 setTopicId(Uuid.fromString("VcL2Mw-cT4aL6XV9VujzoQ")), (short) 0))
                 )));
@@ -629,7 +625,7 @@ public class MetadataLoaderTest {
     @Test
     public void testReloadSnapshot() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testLastAppliedOffset");
-        List<MockPublisher> publishers = singletonList(new MockPublisher("a"));
+        List<MockPublisher> publishers = List.of(new MockPublisher("a"));
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0)).
@@ -656,8 +652,8 @@ public class MetadataLoaderTest {
             assertFalse(publishers.get(0).latestImage.topics().topicsByName().containsKey("foo"));
             assertTrue(publishers.get(0).latestImage.topics().topicsByName().containsKey("bar"));
 
-            loader.handleCommit(new MockBatchReader(500, singletonList(
-                MockBatchReader.newBatch(500, 100, singletonList(
+            loader.handleCommit(new MockBatchReader(500, List.of(
+                MockBatchReader.newBatch(500, 100, List.of(
                     new ApiMessageAndVersion(new FeatureLevelRecord().
                         setName(MetadataVersion.FEATURE_NAME).
                         setFeatureLevel(IBP_3_5_IV0.featureLevel()), (short) 0))))));
@@ -673,7 +669,7 @@ public class MetadataLoaderTest {
     public void testPublishTransaction(boolean abortTxn) throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testTransactions");
         MockPublisher publisher = new MockPublisher("testTransactions");
-        List<MockPublisher> publishers = singletonList(publisher);
+        List<MockPublisher> publishers = List.of(publisher);
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0)).
@@ -688,7 +684,7 @@ public class MetadataLoaderTest {
             loader.waitForAllEventsToBeHandled();
 
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(500, 100, Arrays.asList(
+                MockBatchReader.newSingleBatchReader(500, 100, List.of(
                     new ApiMessageAndVersion(new BeginTransactionRecord()
                         .setName("testTransactions"), (short) 0),
                     new ApiMessageAndVersion(new TopicRecord()
@@ -701,7 +697,7 @@ public class MetadataLoaderTest {
                 "Topic should not be visible since we started transaction");
 
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(500, 100, Arrays.asList(
+                MockBatchReader.newSingleBatchReader(500, 100, List.of(
                     new ApiMessageAndVersion(new PartitionRecord()
                         .setTopicId(Uuid.fromString("dMCqhcK4T5miGH5wEX7NsQ"))
                         .setPartitionId(0), (short) 0),
@@ -715,7 +711,7 @@ public class MetadataLoaderTest {
 
             if (abortTxn) {
                 loader.handleCommit(
-                    MockBatchReader.newSingleBatchReader(500, 100, singletonList(
+                    MockBatchReader.newSingleBatchReader(500, 100, List.of(
                         new ApiMessageAndVersion(new AbortTransactionRecord(), (short) 0)
                     )));
                 loader.waitForAllEventsToBeHandled();
@@ -724,7 +720,7 @@ public class MetadataLoaderTest {
                     "Topic should not be visible since the transaction was aborted");
             } else {
                 loader.handleCommit(
-                    MockBatchReader.newSingleBatchReader(500, 100, singletonList(
+                    MockBatchReader.newSingleBatchReader(500, 100, List.of(
                         new ApiMessageAndVersion(new EndTransactionRecord(), (short) 0)
                     )));
                 loader.waitForAllEventsToBeHandled();
@@ -740,7 +736,7 @@ public class MetadataLoaderTest {
     public void testPublishTransactionWithinBatch() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testPublishTransactionWithinBatch");
         MockPublisher publisher = new MockPublisher("testPublishTransactionWithinBatch");
-        List<MockPublisher> publishers = singletonList(publisher);
+        List<MockPublisher> publishers = List.of(publisher);
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0)).
@@ -755,7 +751,7 @@ public class MetadataLoaderTest {
             loader.waitForAllEventsToBeHandled();
 
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(500, 100, Arrays.asList(
+                MockBatchReader.newSingleBatchReader(500, 100, List.of(
                     new ApiMessageAndVersion(new BeginTransactionRecord()
                         .setName("txn-1"), (short) 0),
                     new ApiMessageAndVersion(new TopicRecord()
@@ -777,7 +773,7 @@ public class MetadataLoaderTest {
     public void testSnapshotDuringTransaction() throws Exception {
         MockFaultHandler faultHandler = new MockFaultHandler("testSnapshotDuringTransaction");
         MockPublisher publisher = new MockPublisher("testSnapshotDuringTransaction");
-        List<MockPublisher> publishers = singletonList(publisher);
+        List<MockPublisher> publishers = List.of(publisher);
         try (MetadataLoader loader = new MetadataLoader.Builder().
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(0)).
@@ -792,7 +788,7 @@ public class MetadataLoaderTest {
             loader.waitForAllEventsToBeHandled();
 
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(500, 100, Arrays.asList(
+                MockBatchReader.newSingleBatchReader(500, 100, List.of(
                     new ApiMessageAndVersion(new BeginTransactionRecord()
                         .setName("txn-1"), (short) 0),
                     new ApiMessageAndVersion(new TopicRecord()
@@ -805,8 +801,8 @@ public class MetadataLoaderTest {
 
             // loading a snapshot discards any in-flight transaction
             loader.handleLoadSnapshot(MockSnapshotReader.fromRecordLists(
-                new MetadataProvenance(600, 101, 4000, true), singletonList(
-                    singletonList(new ApiMessageAndVersion(new TopicRecord().
+                new MetadataProvenance(600, 101, 4000, true), List.of(
+                    List.of(new ApiMessageAndVersion(new TopicRecord().
                         setName("foo").
                         setTopicId(Uuid.fromString("Uum7sfhHQP-obSvfywmNUA")), (short) 0))
                 )));
@@ -841,9 +837,9 @@ public class MetadataLoaderTest {
                 setFaultHandler(faultHandler).
                 setHighWaterMarkAccessor(() -> OptionalLong.of(1)).
                 build()) {
-            loader.installPublishers(singletonList(capturingPublisher)).get();
+            loader.installPublishers(List.of(capturingPublisher)).get();
             loader.handleCommit(
-                MockBatchReader.newSingleBatchReader(0, 1, singletonList(
+                MockBatchReader.newSingleBatchReader(0, 1, List.of(
                     // Any record will work here
                     new ApiMessageAndVersion(new FeatureLevelRecord()
                         .setName(MetadataVersion.FEATURE_NAME)
